container overflow fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
 .content-wrapper {
   min-height: calc(100vh - 80px - 150px);
 }
+
+body {
+  overflow-x: hidden;
+}
