--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -4,10 +4,10 @@
   margin: 50px auto;
 }
 
-.home-container {
-  width: 1000px;
-  margin: 30px auto;
-}
+// .home-container {
+//   width: 1000px;
+//   margin: 30px auto;
+// }
 
 .blue-background {
   background-color: $lightblue;
